--- a/src/index.css
+++ b/src/index.css
@@ -177,4 +177,12 @@ header {
   list-style: disc;
   margin-left: 1.5rem;
 }
+.footer {
+  color: white;
+  text-align: center;
+  bottom: 0;
+  position: fixed;
+  width: 98%;
+  margin: 5px;
+}
 
