--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,22 @@ body {
 }
 
 h2,
-h3,
 h4,
 p {
   margin-bottom: 1em;
   color: white;
 }
+h3 {
+  color: white;
+  text-align: center;
+  padding: auto;
+  position: absolute;
+  top: 50%;
+  transform: translateY(50%);
+  opacity: 1;
 
+
+}
 li {
   list-style: none;
   
