--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-
+* {
+  font-size: arial;
+}
 *::before,
 *::after {
   margin: 0;
@@ -15,11 +17,6 @@ body{
 html {
   font-size: 16px;
   min-height: 100%;
-}
-
-body {
-  min-height: 100vh;
-  
 }
 
 h2,
